--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,6 +9,5 @@ parserOptions:
   sourceType: module
 plugins:
   - react
-rules: {
-  "@typescript-eslint/explicit-function-return-type": "off"
-}
+rules: 
+  - @typescript-eslint/explicit-function-return-type: warn
