--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,5 +9,7 @@ parserOptions:
   sourceType: module
 plugins:
   - react
-rules: 
-  - @typescript-eslint/explicit-function-return-type: warn
+rules: {
+  "@typescript-eslint/explicit-function-return-type": "off"  
+}
+  
